--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class=" bg-gray-200"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
