created new branch called composite-nimish and updated home.jsx

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="https://bitinfotech.in/assets/uploads/media-uploader/bitinfotech-favicon-20201601120139.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>bit-infotech</title>
+
+    <style>
+          *{
+            scroll-behavior: smooth;
+          }
+    </style>
     
   </head>
   <body>
